--- a/data/example.yaml
+++ b/data/example.yaml
@@ -1,5 +1,19 @@
+# TODO - Maybe split this into two files; schema mapping and field operations
 audit_log:
   timestamp: 2
   patient_id: 3
   employee_id: 4
   access_action: 5
+field_operations:
+  #  audit_log:
+  #    access_action:
+  #      constant: "FOO"
+  #    timestamp:
+  #      date_fmt: "2006-01-02"
+  audit_log:
+    constant:
+      field: "access_action"
+      value: "FOO"
+    date_fmt:
+      field: "timestamp"
+      new_date_format: "2006-01-02"
