--- a/data/example.yaml
+++ b/data/example.yaml
@@ -1,9 +1,9 @@
 # TODO - Maybe split this into two files; schema mapping and field operations
 audit_log:
-  timestamp: 2
-  patient_id: 3
-  employee_id: 4
-  access_action: 5
+  Timestamp: 2
+  Patient_id: 3
+  Employee_id: 4
+  Access_action: 5
 field_operations:
   #  audit_log:
   #    access_action:
@@ -12,8 +12,9 @@ field_operations:
   #      date_fmt: "2006-01-02"
   audit_log:
     constant:
-      field: "access_action"
+      field: "AccessAction"
       value: "FOO"
     date_fmt:
-      field: "timestamp"
+      field: "Timestamp"
       new_date_format: "2006-01-02"
+      orig_date_format: "2006-01-02 15:04:05"
